--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,1 @@
-<div class="container text-bg-light">
-  <div class="row">
-    <h1>
-      {{title}}
-  </h1>
-  </div>
-  <div class="row">
-    <div class="col-sm-2">
-      <select [(ngModel)]="selected">
-        <option value="0">-- Select --</option>
-        <option *ngFor="let stateObj of wholeData.data" value="{{stateObj.id}}">{{stateObj.city}}</option>
-      </select>
-    <p>{{ selected }}</p>
-    </div>
-    <div class="col-sm-2">
-      <button class="btn btn-primary" (click)="onChanged()">Track Team</button>
-    </div>
-  </div>
-<div class="row" *ngIf="teamsMatchList">
-  <div class="col-sm-6" *ngFor="let teamMatch of teamsMatchList">
-      <div class="card border-secondary">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-sm-10"><h5>{{teamMatch.home_team.full_name}}  ({{teamMatch.id}})</h5></div>
-            <div class="col-sm-2"><button type="button" class="btn-close" aria-label="Close" (click)="removeTeam(teamMatch.id)"></button></div>
-          </div>
-          <div>{{teamMatch.home_team.conference}} conference</div>
-        </div>
-        <div class="card-body text-secondary">
-          <div class="row">
-            <div class="col-sm-8">
-              <div>Results of past 12 Days:</div>
-              <div>valueMap</div>
-              <div><span>Avg Point Scored:</span>{{teamMatch.home_team.home_team_score}}</div>
-              <div><span>Avg Point Conceded:</span><span>value</span></div>
-            </div>
-            <div class="col-sm-4">
-              <img src="https://interstate21.com/nba-logos/{{teamMatch.home_team.abbreviation}}.png" class="card-img-top" alt="...">
-            </div>
-          </div>
-          <div>
-            <button id="button1" type="button" class="btn btn-success" aria-label="Close" (click)="viewGameResults(teamMatch.id)">See Game Results >></button>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-</div>
+<router-outlet></router-outlet>
