--- a/src/app/team-match-detail/team-match-detail.component.html
+++ b/src/app/team-match-detail/team-match-detail.component.html
@@ -1,33 +1,34 @@
 <div class="container text-bg-light">
-    <div class="row">
-        <div class="col-sm-6 p-1">
-          <div class="card border-secondary">
-            <div class="card-header">
-              <div class="row">
-                <div class="col-sm-10">
-                  <h5>Boston Celtics [BOS]</h5>
-                </div>
-              </div>
-              <div>East conference</div>
+  <div class="row">
+    <div class="col-sm-6 p-1">
+      <div class="card border-secondary">
+        <div class="card-header">
+          <div class="row">
+            <div class="col-sm-10">
+              <h5>Boston Celtics [BOS]</h5>
             </div>
-            <div class="card-body text-secondary">
-              <div class="row">
-                <div class="col-sm-6">
-                  <div>Scores of past 12 days:</div>
-                  <div *ngFor="let result of teamResult"> 
-                  <div>
-                    <span><strong>{{result.home_team.abbreviation}}</strong></span>&nbsp;<span>{{result.home_team_score }}</span>&nbsp;-&nbsp;<span><strong>{{result.visitor_team.abbreviation}}</strong></span>&nbsp;<span>{{result.visitor_team_score }}</span>
-                  </div>
+          </div>
+          <div>East conference</div>
+        </div>
+        <div class="card-body text-secondary">
+          <div class="row">
+            <div class="col-sm-6">
+              <div>Scores of past 12 days:</div>
+              <div *ngFor="let result of teamResult">
+                <div>
+                  <span><strong>{{result.home_team.abbreviation}}</strong></span>&nbsp;<span>{{result.home_team_score
+                    }}</span>&nbsp;-&nbsp;<span><strong>{{result.visitor_team.abbreviation}}</strong></span>&nbsp;<span>{{result.visitor_team_score
+                    }}</span>
                 </div>
-                </div>
-              </div>
-              <div>
-                <button type="button" (click)="backTOMatchList()" class="btn btn-success" id="backBtn">
-                    << Back to all team stats
-                </button>
               </div>
             </div>
           </div>
+          <div>
+            <button type="button" (click)="backTOMatchList()" class="btn btn-success" id="backBtn">
+              << Back to all team stats </button>
+          </div>
         </div>
       </div>
+    </div>
+  </div>
 </div>
